# digitalhack-perm-1218

./: .gitignore  README.md  ner_baseline.ipynb  ner_baseline_new_train.ipynb  ner_baseline_new_train_final.ipynb  pyproject.toml
