[tool.poetry]
name = "rutube-hack"
version = "0.1"
description = "Recognizing named entities in video titles and descriptions"
authors = ["Danessely <hdystasyfibkv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
